# AssetManager

./: .env.example  .gitignore  LICENSE  README.md  login.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  security.yml
app/: __init__.py  database.py  main.py
app/api/: __init__.py  announcements.py  assets.py  deps.py  error_logs.py  orders.py  user_logs.py  user_sessions.py  users.py
app/config/: entity_loader.py
app/core/: __init__.py  auth.py  banner.py  config.py  redis.py  time_utils.py
app/models/: __init__.py  announcement.py  asset.py  base.py  borrow_log.py  order.py  user.py  user_session.py
app/services/: __init__.py  api_utils.py  error_logger.py  excel_service.py  image_service.py  pinyin_utils.py  session_service.py  sql_utils.py  user_service.py  user_utils.py
config/: entity.yaml
config/presets/: equipment.yaml
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  fontLoader.ts  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnnouncementBanner.tsx  AnnouncementButton.tsx  AnnouncementDetail.tsx  BaseForm.tsx  BorrowDialog.tsx  BugReportButton.tsx  ErrorBoundary.tsx  SidebarLogo.tsx  TableActionButtons.tsx  UserEditDialog.tsx
frontend/src/config/: entity.ts
frontend/src/hooks/: useDialogState.tsx  useErrorLogger.tsx  useFormModal.tsx  useMobile.tsx  useRememberedUser.ts  useTableState.tsx  useTableUrlState.ts  useTheme.ts
frontend/src/lib/: badgeConstants.ts  bugReportButtonStorage.ts  options.ts  (+11 more)
(+40 files in other folders)
